--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -30,10 +30,11 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.adib.med_consultation"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -47,4 +48,7 @@ android {
 
 flutter {
     source '../..'
+}
+dependencies {
+    implementation 'com.android.support:multidex:2.0.1'
 }
