--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,15 @@ dependencies:
   http: ^0.13.3
   localstorage: ^2.0.0
   cloud_firestore: ^2.0.0
+  firebase_core: ^1.3.0
+  firebase_storage: ^9.0.0
+  shared_preferences: ^2.0.6
+  fluttertoast: ^8.0.7
+  photo_view: ^0.11.1
+  intl: ^0.17.0
+  image_picker: 0.7.4
 
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
